--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <html>
-hello world
+  <head>
+    <meta charset="utf-8">
+    <title>blackroyal</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
 </html>
