--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>blackroyal</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <h1>Hello Jennifer :-)!</h1>
-  </body>
+</head>
+    <body>
+        <div class="floatCenter">  
+        </div>
+    </body>
 </html>
