--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-        <div class="floatCenter">  
+        <div class="floatCenter">
+            <img src="../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png" height="400" />
         </div>
     </body>
 </html>
