--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
+</html>
+
+
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    
+     <meta charset="utf-8">
     <title>blackroyal</title>
     <link rel="stylesheet" href="styles.css">
-</head>
-    <body>
-        <div class="floatCenter">
-        </div>
-    </body>
+    </head>
+  
+  <body>
+
+<div class="background">
+		<div class="content">
+		</div>
+</div>
+
+</body>
 </html>
