--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <body>
 
 <div class="background">
+   <div class="innerouter">
 	<div class="outer">
-		<div class="content">
-		</div>
+	    <div class="content">
+	    </div>
 	</div>
+   </div>
 </div>
 
 </body>
