--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
 
 <div class="background">
-   <div class="innerouter">
-	<div class="outer">
+   <div class="outer">
+	<div class="inner">
 	    <div class="content">
 	    </div>
 	</div>
