--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <html>
-  <head>
-    
-     <meta charset="utf-8">
-    <title>blackroyal</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
-    </head>
-  
-  <body>
-
-<div class="background">
-   <div class="outer">
-       <div class="content">
-       </div>
-   </div>
-   <div class="footer">blackroyal</div>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <div class="exactCenter">
+  <div class="div1">
+  </div>
+  <div class="div2">
+    blackroyal
+  </div>
 </div>
-
 </body>
 </html>
