--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>blackroyal</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&family=Overpass:wght@800&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div class="exactCenter">
-  <div class="div1">
-  </div>
-  <div class="div2">
-    blackroyal
-  </div>
+  
+  <head>
+  <style type="text/css">
+
+body, html{
+			margin-top: 0;
+			padding: 0;
+			overflow: hidden;
+			height: 100%; 
+			max-height: 100%; 
+			font-family:Sans-serif;
+			line-height: 1.5em;
+      background: linear-gradient(to bottom, #22c1c3, #fdbb2d), #00FF00;
+		}
+    
+img {
+    max-width:100%;
+    max-height:100%;
+    position:absolute;
+    top:0; left:0; right:0; bottom:0;
+    margin:auto;
+}
+    
+  </style>
+  </head>
+  
+  <div style="width: 100%; margin: 0 auto;">
+  <img src="../BR_dark.svg">
 </div>
-</body>
+  
+  
 </html>
