--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ img {
   </head>
   
   <div style="width: 100%; margin: 0 auto;">
-  <img src="../BR_dark.svg">
+  <img src="../BR_light.svg">
 </div>
   
   
