--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@ img {
 }
     
   </style>
+
+<link rel="shortcut icon" href="../BR_light.svg" type="image/x-icon">
+
   </head>
   
   <div style="width: 100%; margin: 0 auto;">
-  <img src="../BR_light.svg">
+  <img src="../BR_dark.svg">
 </div>
   
   
