--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html{
 			max-height: 100%; 
 			font-family:Sans-serif;
 			line-height: 1.5em;
-      background: linear-gradient(to bottom, #22c1c3, #fdbb2d), #00FF00;
+      background: linear-gradient(to bottom, #00CFEF, #00FF00), #000;
 		}
     
 img {
