--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ img {
     
   </style>
 
-<link rel="shortcut icon" href="../fav.svg" type="image/x-icon">
+<link rel="shortcut icon" href="../fav_2.svg" type="image/x-icon">
 
   </head>
   
