--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ img {
   </head>
   
   <div style="width: 100%; margin: 0 auto;">
-  <img src="../BR_dark.svg">
+  <img src="../BR_dark2.svg">
 </div>
   
   
