--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ img {
     
   </style>
 
-<link rel="shortcut icon" href="../fav_2.png" type="image/x-icon">
+<link rel="shortcut icon" href="../fav.png" type="image/x-icon">
 
   </head>
   
   <div style="width: 100%; margin: 0 auto;">
-  <img src="../BR_dark2.svg">
+  <img src="../BR_dk.svg">
 </div>
   
   
