--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
+<html>
+      <head>
+            <link rel="stylesheet" href="mystyle.css">
+      </head>
 
 
-<link rel="stylesheet" href="mystyle.css">
+      <body>
+            <div style="width: 100%; margin: 0 auto;">
+                  <img src="https://www.blackroyal.io/BR_dk.svg">
+            </div>
 
-<body>
-      <div style="width: 100%; margin: 0 auto;">
-      <img src="https://www.blackroyal.io/BR_dk.svg">
-    </div>
-  
-    <div class="footer">
-    <p class="footer-text">
-      <a href="" class="button">Web3</a>
-      <a href="" class="button">Blockchain</a> 
-      <a href="" class="button">Capital</a>
-    </p>
-  
-  </div>
-  
-  <div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-     <div class="wave"></div>
-  </div>
-</body>
+            <div class="footer">
+                  <p class="footer-text">
+                        <a href="" class="button">Web3</a>
+                        <a href="" class="button">Blockchain</a> 
+                        <a href="" class="button">Capital</a>
+                  </p>
+
+            </div>
+
+            <div>
+                  <div class="wave"></div>
+                  <div class="wave"></div>
+                  <div class="wave"></div>
+                  <div class="wave"></div>
+                  <div class="wave"></div>
+            </div>
+      </body>
+</html>
