--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
       <head>
             <link rel="stylesheet" href="mystyle.css">
+            <link rel="icon" type="image/x-icon" href="https://www.blackroyal.io/fav_2.png">
       </head>
 
 
