--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
       <head>
             <link rel="stylesheet" href="mystyle.css">
+            <link rel="stylesheet" href="carousel.js">
             <link rel="icon" type="image/x-icon" href="https://www.blackroyal.io/fav_2.png">
+            <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
       </head>
 
 
@@ -9,6 +11,7 @@
             <div style="width: 100%; margin: 0 auto;">
                   <img src="https://www.blackroyal.io/BR_dk.svg">
             </div>
+            
 
             <div class="footer">
                   <p class="footer-text">
