--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
       <head>
             <link rel="stylesheet" href="mystyle.css">
             <link rel="stylesheet" href="carousel.js">
-            <link rel="icon" type="image/x-icon" href="https://www.blackroyal.io/fav_2.png">
+            <link rel="icon" type="image/x-icon" href="https://www.blackroyal.io/fav.svg">
             <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
       </head>
 
