--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
                   <img src="https://www.blackroyal.io/BR_dk.svg">
             </div>
             
+            <h1>Web3
+                  <span
+                  class="txt-rotate"
+                  data-period="2000"
+                  data-rotate='[ "lovers.", "investors.", "developers.", "community builders." ]'></span>
+            </h1>
 
             <div class="footer">
                   <p class="footer-text">
