--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                   <img src="https://www.blackroyal.io/BR_dk.svg">
             </div>
             
-            <h1>Web3
+            <h1>We are Web3
                   <span
                   class="txt-rotate"
                   data-period="2000"
