--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
       <head>
             <link rel="stylesheet" href="mystyle.css">
-            <link rel="javascript" href="javascript.js">
+            <script src="carousel.js"></script>
             <link rel="icon" type="image/x-icon" href="https://www.blackroyal.io/fav.svg">
             <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
       </head>
