--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
-<link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 
-<script src="https://www.blackroyal.io/carousel.js"></script>
+<html>
+  <head>
+      <link rel="stylesheet" href="mystyle.css">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+      <script src="https://www.blackroyal.io/carousel.js"></script>
+  </head>
+  
+  <body>
 
-<div id="fullscreen-container">
-  <div id="header">
-    &nbsp;
-  </div>
+      <div id="fullscreen-container">
+        <div id="header">
+          &nbsp;
+        </div>
 
-  <div id="content">
-    <div id="column-1">
-      &nbsp;
-    </div>
-    <div id="column-2">
-      <img src="https://www.blackroyal.io/BR_dk.svg">
-      <h1>We are Web3
+        <div id="content">
+          <div id="column-1">
+            &nbsp;
+          </div>
+          <div id="column-2">
+            <img src="https://www.blackroyal.io/BR_dk.svg">
+            <h1>We are Web3
                   <span
                   class="txt-rotate"
                   data-period="200"
                   data-rotate='[ "lovers.", "investors.", "developers.", "community builders." ]'></span>
             </h1>
-    </div>
-    <div id="column-3">
-      &nbsp;
-    </div>
-  </div>
+          </div>
+          <div id="column-3">
+            &nbsp;
+          </div>
+        </div>
 
-  <div id="footer">
-    
-                  <div class="wave"></div>
-                  <div class="wave"></div>
-                  <div class="wave"></div>
-                  <div class="wave"></div>
-                  <div class="wave"></div>
-    
-  </div>
-</div>
+        <div id="footer">
+
+          <div class="wave"></div>
+          <div class="wave"></div>
+          <div class="wave"></div>
+          <div class="wave"></div>
+          <div class="wave"></div>
+
+        </div>
+      </div>    
+
+</body>
+</html>
