--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" href="mystyle.css">
+      <link rel="icon" type="image/x-icon" href="https://www.blackroyal.io/fav.svg">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
       <script src="https://www.blackroyal.io/carousel.js"></script>
   </head>
